Correções e implementações de testes no projeto Elevenparis-api.